Fix this Naming

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
     <meta name="viewport" content="This is E-comme Platform for NIKE React App" />
-    <title>brand-page</title>
+    <title>Nike React App</title>
   </head>
   <body>
     <div id="root"></div>
